--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-size: cover;
         }
         .movie {
-            font-family: "Raleway", sans-serif;
+            font-family: "Teko", sans-serif;
             background-image: linear-gradient(rgb(220, 88, 88),rgb(252, 242, 104));
             border: 1px solid #ddd;
             margin-bottom: 20px;
