--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         }
         #search-form {
             margin-bottom: 20px;
+            pointer:cursor;
             
         }
         #search-input {
